Fix question wrapping on smaller screens
Refs #1099, a684e1a2cbbe023e67ad5810c0199ad3b648a353

--- a/assets/style.css
+++ b/assets/style.css
@@ -707,12 +707,14 @@ math {
   }
 
   & dt {
-    min-inline-size: 20ch;
-    max-inline-size: 50%;
+    @media (width >= 30em) {
+      min-inline-size: 20ch;
+      max-inline-size: 50%;
 
-    & + dd {
-      flex-grow: 1;
-      flex-basis: min-content;
+      & + dd {
+        flex-grow: 1;
+        flex-basis: min-content;
+      }
     }
   }
 }
